--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,9 @@
 layout: archive
 ---
 
-
+{% if page.announcement_image %}
+  <img src="{{page.announcement_image}}">
+{% endif %}
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
